[gd_scene load_steps=4 format=2]

[ext_resource path="res://Score.gd" type="Script" id=1]
[ext_resource path="res://fonts/score.tres" type="DynamicFont" id=2]
[ext_resource path="res://audio/bet.wav" type="AudioStream" id=3]

[node name="global" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="score_label" type="Label" parent="."]
margin_left = 260.0
margin_top = 8.0
margin_right = 500.0
margin_bottom = 45.3663
custom_fonts/font = ExtResource( 2 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="refresh" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="start" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="wait1" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="wait2" type="Timer" parent="."]
wait_time = 3.5

[node name="end" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[connection signal="timeout" from="refresh" to="." method="_on_refresh_timeout"]
[connection signal="timeout" from="start" to="." method="_on_start_timeout"]
[connection signal="timeout" from="wait1" to="." method="_on_wait1_timeout"]
[connection signal="timeout" from="wait2" to="." method="_on_wait2_timeout"]
[connection signal="finished" from="end" to="." method="_on_end_finished"]
